apps/production/external/unifi/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`unifi.dcunha.io`)
    kind: Rule
    services:
    - name: unifi-svc
      port: 8443
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
